@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.1083 2003/01/10 19:48:04 wiz Exp $
+$NetBSD: CHANGES,v 1.1084 2003/01/10 20:22:42 jlam Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -201,3 +201,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated docbook-xml to 4.2nb1 [jmmv 2003-01-10]
 	Updated libglade2 to 2.0.1nb4 [jmmv 2003-01-10]
 	Updated feh to 1.2.4 [wiz 2003-01-10]
+	Updated oss to 3.9.7g [jlam 2003-01-10]
